# scenes/shop/shop_screen.gd
extends Control

var currency: int = 0
var shop_data: Dictionary = {}
var item_cards: Array[Node] = []

var current_cover_gallery: Node = null
var current_cover_item_data: Dictionary = {}

var player_data_manager: PlayerDataManager = null
var music_manager = null
var transitions = null


func _ready():
	print("ShopScreen.gd: _ready –≤—ã–∑–≤–∞–Ω.")

	player_data_manager = PlayerDataManager.new()
	var game_engine = get_parent()
	if game_engine and game_engine.has_method("get_music_manager"):
		music_manager = game_engine.get_music_manager()
		print("ShopScreen.gd: MusicManager –ø–æ–ª—É—á–µ–Ω —á–µ—Ä–µ–∑ GameEngine.")
	else:
		printerr("ShopScreen.gd: MusicManager –Ω–µ –Ω–∞–π–¥–µ–Ω —á–µ—Ä–µ–∑ GameEngine.")

	if game_engine and game_engine.has_method("get_transitions"):
		transitions = game_engine.get_transitions()
		print("ShopScreen.gd: Transitions –ø–æ–ª—É—á–µ–Ω —á–µ—Ä–µ–∑ GameEngine.")
	else:
		printerr("ShopScreen.gd: Transitions –Ω–µ –Ω–∞–π–¥–µ–Ω —á–µ—Ä–µ–∑ GameEngine.")

	var file_path = "res://data/shop_data.json"
	var file_access = FileAccess.open(file_path, FileAccess.READ)
	if file_access:
		var json_text = file_access.get_as_text()
		file_access.close()
		var json_result = JSON.parse_string(json_text)
		if json_result is Dictionary:
			shop_data = json_result
			print("ShopScreen.gd: –î–∞–Ω–Ω—ã–µ –º–∞–≥–∞–∑–∏–Ω–∞ –∑–∞–≥—Ä—É–∂–µ–Ω—ã —É—Å–ø–µ—à–Ω–æ.")
		else:
			print("ShopScreen.gd: –û—à–∏–±–∫–∞ –ø–∞—Ä—Å–∏–Ω–≥–∞ JSON –∏–ª–∏ –¥–∞–Ω–Ω—ã–µ –Ω–µ —è–≤–ª—è—é—Ç—Å—è —Å–ª–æ–≤–∞—Ä—ë–º.")
	else:
		print("ShopScreen.gd: –§–∞–π–ª shop_data.json –Ω–µ –Ω–∞–π–¥–µ–Ω: ", file_path)

	currency = player_data_manager.get_currency()
	_update_currency_label()

	_connect_category_buttons()
	_connect_back_button()

	var items_scroll = $MainContent/MainVBox/ContentMargin/ContentHBox/ItemListVBox/ItemsScroll
	if items_scroll:
		print("ShopScreen.gd: ItemsScroll –Ω–∞–π–¥–µ–Ω.")
		items_scroll.clip_contents = true

		var items_list_container = items_scroll.get_node("ItemsListContainer")
		if items_list_container:
			print("ShopScreen.gd: ItemsListContainer –Ω–∞–π–¥–µ–Ω.")

			var grid_container = items_list_container.get_node("ItemsGridCenter/ItemsGridBottomMargin/ItemsGrid")
			if grid_container:
				print("ShopScreen.gd: ItemsGrid –Ω–∞–π–¥–µ–Ω –ø–æ –Ω–æ–≤–æ–º—É –ø—É—Ç–∏ $MainContent/MainVBox/ContentMargin/ContentHBox/ItemListVBox/ItemsScroll/ItemsListContainer/ItemsGridCenter/ItemsGridBottomMargin/ItemsGrid")

				grid_container.add_theme_constant_override("v_separation", 30)
				grid_container.add_theme_constant_override("h_separation", 30)

				items_scroll.size_flags_horizontal = Control.SIZE_EXPAND_FILL
				items_scroll.size_flags_vertical = Control.SIZE_EXPAND_FILL

				var item_list_vbox = items_scroll.get_parent()
				if item_list_vbox:
					print("ShopScreen.gd: –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞—é size_flags_vertical –¥–ª—è ItemListVBox")
					item_list_vbox.size_flags_vertical = Control.SIZE_EXPAND_FILL
				else:
					print("ShopScreen.gd: –û–®–ò–ë–ö–ê: ItemListVBox –Ω–µ –Ω–∞–π–¥–µ–Ω –∫–∞–∫ —Ä–æ–¥–∏—Ç–µ–ª—å ItemsScroll.")

				var content_hbox = item_list_vbox.get_parent()
				if content_hbox:
					print("ShopScreen.gd: –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞—é size_flags_vertical –¥–ª—è ContentHBox")
					content_hbox.size_flags_vertical = Control.SIZE_EXPAND_FILL
				else:
					print("ShopScreen.gd: –û–®–ò–ë–ö–ê: ContentHBox –Ω–µ –Ω–∞–π–¥–µ–Ω –∫–∞–∫ —Ä–æ–¥–∏—Ç–µ–ª—å ItemListVBox.")

				var content_margin = content_hbox.get_parent()
				if content_margin:
					print("ShopScreen.gd: –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞—é size_flags_vertical –¥–ª—è ContentMargin")
					content_margin.size_flags_vertical = Control.SIZE_EXPAND_FILL
				else:
					print("ShopScreen.gd: –û–®–ò–ë–ö–ê: ContentMargin –Ω–µ –Ω–∞–π–¥–µ–Ω –∫–∞–∫ —Ä–æ–¥–∏—Ç–µ–ª—å ContentHBox.")

			else:
				print("ShopScreen.gd: –û–®–ò–ë–ö–ê: ItemsGrid –ù–ï –Ω–∞–π–¥–µ–Ω –≤–Ω—É—Ç—Ä–∏ ItemsGridBottomMargin.")
		else:
			print("ShopScreen.gd: –û–®–ò–ë–ö–ê: ItemsListContainer –Ω–µ –Ω–∞–π–¥–µ–Ω –≤–Ω—É—Ç—Ä–∏ ItemsScroll.")
	else:
		print("ShopScreen.gd: –û–®–ò–ë–ö–ê: ItemsScroll –Ω–µ –Ω–∞–π–¥–µ–Ω.")

	_create_item_cards()

func _update_currency_label():
	print("ShopScreen.gd: –ü–æ–ø—ã—Ç–∫–∞ –Ω–∞–π—Ç–∏ CurrencyLabel –ø–æ –ø—É—Ç–∏: $MainContent/MainVBox/VBoxContainer/CurrencyLabel")
	var main_vbox = $MainContent/MainVBox
	if main_vbox:
		print("ShopScreen.gd: MainVBox –Ω–∞–π–¥–µ–Ω.")
		var v_box_container = main_vbox.get_node("VBoxContainer")
		if v_box_container:
			print("ShopScreen.gd: VBoxContainer –Ω–∞–π–¥–µ–Ω.")
			var currency_label = v_box_container.get_node("CurrencyLabel")
			if currency_label:
				print("ShopScreen.gd: CurrencyLabel –Ω–∞–π–¥–µ–Ω –ø–æ –ø—É—Ç–∏ $MainContent/MainVBox/VBoxContainer/CurrencyLabel")
				currency_label.text = "üí∞ –í–∞–ª—é—Ç–∞: %d" % player_data_manager.get_currency()
				currency_label.add_theme_color_override("font_color", Color(1.0, 0.84, 0.0))
				currency_label.add_theme_font_size_override("font_size", 32)
			else:
				print("ShopScreen.gd: –û–®–ò–ë–ö–ê: CurrencyLabel –ù–ï –Ω–∞–π–¥–µ–Ω –≤–Ω—É—Ç—Ä–∏ VBoxContainer.")
		else:
			print("ShopScreen.gd: –û–®–ò–ë–ö–ê: VBoxContainer –ù–ï –Ω–∞–π–¥–µ–Ω –≤–Ω—É—Ç—Ä–∏ MainVBox.")
	else:
		print("ShopScreen.gd: –û–®–ò–ë–ö–ê: MainVBox –ù–ï –Ω–∞–π–¥–µ–Ω –ø–æ –ø—É—Ç–∏ $MainContent/MainVBox.")


func _connect_category_buttons():
	var all_btn = $MainContent/MainVBox/VBoxContainer/CategoriesHBox/CategoryButtonAll
	var kick_btn = $MainContent/MainVBox/VBoxContainer/CategoriesHBox/CategoryButtonKick
	var snare_btn = $MainContent/MainVBox/VBoxContainer/CategoriesHBox/CategoryButtonSnare
	var cover_btn = $MainContent/MainVBox/VBoxContainer/CategoriesHBox/CategoryButtonCover
	var misc_btn = $MainContent/MainVBox/VBoxContainer/CategoriesHBox/CategoryButtonMisc

	if all_btn:
		all_btn.pressed.connect(_on_category_selected.bind("–í—Å–µ"))
		_set_category_button_style(all_btn, true)
	if kick_btn:
		kick_btn.pressed.connect(_on_category_selected.bind("–ö–∏–∫"))
		_set_category_button_style(kick_btn, false)
	if snare_btn:
		snare_btn.pressed.connect(_on_category_selected.bind("–°–Ω–µ–π—Ä"))
		_set_category_button_style(snare_btn, false)
	if cover_btn:
		cover_btn.pressed.connect(_on_category_selected.bind("–û–±–ª–æ–∂–∫–∏"))
		_set_category_button_style(cover_btn, false)
	if misc_btn:
		misc_btn.pressed.connect(_on_category_selected.bind("–ü—Ä–æ—á–µ–µ"))
		_set_category_button_style(misc_btn, false)
func _connect_back_button():
	var back_button = $MainContent/MainVBox/BackButton
	if back_button:
		back_button.pressed.connect(_on_back_pressed)
		print("ShopScreen.gd: –ü–æ–¥–∫–ª—é—á—ë–Ω —Å–∏–≥–Ω–∞–ª pressed –∫–Ω–æ–ø–∫–∏ –ù–∞–∑–∞–¥.")
	else:
		printerr("ShopScreen.gd: –ö–Ω–æ–ø–∫–∞ BackButton –Ω–µ –Ω–∞–π–¥–µ–Ω–∞ –ø–æ –ø—É—Ç–∏ $MainContent/MainVBox/BackButton!")

func _set_category_button_style(button: Button, is_all: bool):
	if is_all:
		button.self_modulate = Color(1.0, 0.84, 0.0)
		button.add_theme_color_override("font_color", Color(0.0, 0.0, 0.0))
	else:
		button.self_modulate = Color(0.0, 0.0, 0.0, 0.3)
		button.add_theme_color_override("font_color", Color(1.0, 1.0, 1.0))

func _create_item_cards():
	for card in item_cards:
		card.queue_free()
	item_cards.clear()

	var items = shop_data.get("items", [])
	print("ShopScreen.gd: –ù–∞–π–¥–µ–Ω–æ –ø—Ä–µ–¥–º–µ—Ç–æ–≤: ", items.size())

	var item_card_scene = preload("res://scenes/shop/item_card.tscn")

	var main_content = $MainContent
	if main_content:
		var main_vbox = main_content.get_node("MainVBox")
		if main_vbox:
			var content_margin = main_vbox.get_node("ContentMargin")
			if content_margin:
				var content_hbox = content_margin.get_node("ContentHBox")
				if content_hbox:
					var item_list_vbox = content_hbox.get_node("ItemListVBox")
					if item_list_vbox:
						var items_scroll = item_list_vbox.get_node("ItemsScroll")
						if items_scroll:
							var items_list_container = items_scroll.get_node("ItemsListContainer")
							if items_list_container:
								print("ShopScreen.gd: ItemsListContainer –Ω–∞–π–¥–µ–Ω.")
								var grid_container = items_list_container.get_node("ItemsGridCenter/ItemsGridBottomMargin/ItemsGrid")
								if grid_container:
									print("ShopScreen.gd: ItemsGrid –Ω–∞–π–¥–µ–Ω –ø–æ –Ω–æ–≤–æ–º—É –ø—É—Ç–∏ $MainContent/MainVBox/ContentMargin/ContentHBox/ItemListVBox/ItemsScroll/ItemsListContainer/ItemsGridCenter/ItemsGridBottomMargin/ItemsGrid")

									grid_container.add_theme_constant_override("v_separation", 30)
									grid_container.add_theme_constant_override("h_separation", 30)

									for i in range(items.size()):
										var item_data = items[i]

										var new_card = item_card_scene.instantiate()

										new_card.item_data = item_data

										var is_purchased = player_data_manager.is_item_unlocked(item_data.item_id)
										var is_active = false
										var category_map = _get_category_map()
										var internal_category = category_map.get(item_data.category, "")
										if internal_category:
											is_active = (player_data_manager.get_active_item(internal_category) == item_data.item_id)

										new_card.update_state(is_purchased, is_active)

										new_card.buy_pressed.connect(_on_item_buy_pressed)
										new_card.use_pressed.connect(_on_item_use_pressed)
										new_card.preview_pressed.connect(_on_item_preview_pressed)
										new_card.cover_click_pressed.connect(_on_cover_click_pressed)

										grid_container.add_child(new_card)
										item_cards.append(new_card)

									print("ShopScreen.gd: –°–æ–∑–¥–∞–Ω–æ –∫–∞—Ä—Ç–æ—á–µ–∫: ", item_cards.size())
									items_scroll.scroll_vertical = 0
									items_scroll.scroll_horizontal = 0
								else:
									print("ShopScreen.gd: –û–®–ò–ë–ö–ê: ItemsGrid –ù–ï –Ω–∞–π–¥–µ–Ω –≤–Ω—É—Ç—Ä–∏ ItemsGridBottomMargin.")
							else:
								print("ShopScreen.gd: –û–®–ò–ë–ö–ê: ItemsListContainer –ù–ï –Ω–∞–π–¥–µ–Ω –≤–Ω—É—Ç—Ä–∏ ItemsScroll.")
						else:
							print("ShopScreen.gd: –û–®–ò–ë–ö–ê: ItemsScroll –ù–ï –Ω–∞–π–¥–µ–Ω –≤–Ω—É—Ç—Ä–∏ ItemListVBox.")
					else:
						print("ShopScreen.gd: –û–®–ò–ë–ö–ê: ItemListVBox –ù–ï –Ω–∞–π–¥–µ–Ω –≤–Ω—É—Ç—Ä–∏ ContentHBox.")
				else:
					print("ShopScreen.gd: –û–®–ò–ë–ö–ê: ContentHBox –ù–ï –Ω–∞–π–¥–µ–Ω –≤–Ω—É—Ç—Ä–∏ ContentMargin.")
			else:
				print("ShopScreen.gd: –û–®–ò–ë–ö–ê: ContentMargin –ù–ï –Ω–∞–π–¥–µ–Ω –≤–Ω—É—Ç—Ä–∏ MainVBox.")
		else:
			print("ShopScreen.gd: –û–®–ò–ë–ö–ê: MainVBox –ù–ï –Ω–∞–π–¥–µ–Ω –≤–Ω—É—Ç—Ä–∏ MainContent.")
	else:
		print("ShopScreen.gd: –û–®–ò–ë–ö–ê: MainContent –ù–ï –Ω–∞–π–¥–µ–Ω –ø–æ –ø—É—Ç–∏ $MainContent.")


func _get_category_map() -> Dictionary:
	return {
		"–ö–∏–∫": "Kick",
		"–°–Ω–µ–π—Ä": "Snare",
		"–û–±–ª–æ–∂–∫–∏": "Covers",
		"–ü—Ä–æ—á–µ–µ": "Misc"
	}

func _on_category_selected(category: String):
	print("ShopScreen.gd: –í—ã–±—Ä–∞–Ω–∞ –∫–∞—Ç–µ–≥–æ—Ä–∏—è: ", category)
	for card in item_cards:
		card.queue_free()
	item_cards.clear()

	var filtered_items = []
	for item in shop_data.get("items", []):
		if category == "–í—Å–µ" or item.category == category:
			filtered_items.append(item)

	var grid_container = $MainContent/MainVBox/ContentMargin/ContentHBox/ItemListVBox/ItemsScroll/ItemsListContainer/ItemsGridCenter/ItemsGridBottomMargin/ItemsGrid
	if grid_container:
		for i in range(filtered_items.size()):
			var item_data = filtered_items[i]
			var new_card = preload("res://scenes/shop/item_card.tscn").instantiate()
			new_card.item_data = item_data

			var is_purchased = player_data_manager.is_item_unlocked(item_data.item_id)
			var is_active = false
			var category_map = _get_category_map()
			var internal_category = category_map.get(item_data.category, "")
			if internal_category:
				is_active = (player_data_manager.get_active_item(internal_category) == item_data.item_id)

			new_card.update_state(is_purchased, is_active)

			new_card.buy_pressed.connect(_on_item_buy_pressed)
			new_card.use_pressed.connect(_on_item_use_pressed)
			new_card.preview_pressed.connect(_on_item_preview_pressed)
			new_card.cover_click_pressed.connect(_on_cover_click_pressed)

			grid_container.add_child(new_card)
			item_cards.append(new_card)
	else:
		print("ShopScreen.gd: –û–®–ò–ë–ö–ê: ItemsGrid –Ω–µ –Ω–∞–π–¥–µ–Ω –≤ _on_category_selected –ø–æ –Ω–æ–≤–æ–º—É –ø—É—Ç–∏")

	print("ShopScreen.gd: –û—Ç—Ñ–∏–ª—å—Ç—Ä–æ–≤–∞–Ω–æ –ø—Ä–µ–¥–º–µ—Ç–æ–≤: ", filtered_items.size())

func _on_item_buy_pressed(item_id: String):
	print("ShopScreen.gd: –ó–∞–ø—Ä–æ—Å –Ω–∞ –ø–æ–∫—É–ø–∫—É –ø—Ä–µ–¥–º–µ—Ç–∞: ", item_id)

	var item_data = _find_item_by_id(item_id)
	if item_data:
		var price = item_data.get("price", 0)
		var current_currency = player_data_manager.get_currency()

		if current_currency >= price:
			player_data_manager.add_currency(-price)
			player_data_manager.unlock_item(item_id)
			_update_currency_label()
			_update_item_card_state(item_id, true, false)
			print("ShopScreen.gd: –ü—Ä–µ–¥–º–µ—Ç –∫—É–ø–ª–µ–Ω: ", item_id)
		else:
			print("ShopScreen.gd: –ù–µ–¥–æ—Å—Ç–∞—Ç–æ—á–Ω–æ –≤–∞–ª—é—Ç—ã –¥–ª—è –ø–æ–∫—É–ø–∫–∏: ", item_id)
	else:
		print("ShopScreen.gd: –ü—Ä–µ–¥–º–µ—Ç —Å ID ", item_id, " –Ω–µ –Ω–∞–π–¥–µ–Ω –≤ –¥–∞–Ω–Ω—ã—Ö –º–∞–≥–∞–∑–∏–Ω–∞.")
		
func _is_item_file_available(item_data: Dictionary) -> bool:
	var audio_path = item_data.get("audio", "")
	var image_path = item_data.get("image", "")
	var images_folder = item_data.get("images_folder", "")
	var images_count = item_data.get("images_count", 0)
	if audio_path != "":
		var full_audio_path = audio_path
		if not full_audio_path.begins_with("res://"):
			pass
		if not FileAccess.file_exists(full_audio_path):
			print("ShopScreen.gd: –ê—É–¥–∏–æ —Ñ–∞–π–ª –Ω–µ –Ω–∞–π–¥–µ–Ω –¥–ª—è ", item_data.get("name", "–ë–µ–∑ –Ω–∞–∑–≤–∞–Ω–∏—è"), ": ", full_audio_path)
			return false
	if image_path != "":
		if not FileAccess.file_exists(image_path):
			print("ShopScreen.gd: –ò–∑–æ–±—Ä–∞–∂–µ–Ω–∏–µ –Ω–µ –Ω–∞–π–¥–µ–Ω–æ –¥–ª—è ", item_data.get("name", "–ë–µ–∑ –Ω–∞–∑–≤–∞–Ω–∏—è"), ": ", image_path)
			return false
	if images_folder != "" and images_count > 0:
		var cover_exists = false
		for i in range(1, images_count + 1):
			var cover_path = images_folder + "/cover%d.png" % i
			if FileAccess.file_exists(cover_path):
				cover_exists = true
				break
		if not cover_exists:
			print("ShopScreen.gd: –ù–∏ –æ–¥–Ω–æ–π –æ–±–ª–æ–∂–∫–∏ –Ω–µ –Ω–∞–π–¥–µ–Ω–æ –¥–ª—è ", item_data.get("name", "–ë–µ–∑ –Ω–∞–∑–≤–∞–Ω–∏—è"), " –≤ –ø–∞–ø–∫–µ: ", images_folder)
			return false
	return true

func _on_item_use_pressed(item_id: String):
	print("ShopScreen.gd: –ó–∞–ø—Ä–æ—Å –Ω–∞ –∏—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏–µ –ø—Ä–µ–¥–º–µ—Ç–∞: ", item_id)

	var item_data = _find_item_by_id(item_id)
	if item_data:
		var category_map = _get_category_map()
		var internal_category = category_map.get(item_data.category, "")
		if internal_category:
			player_data_manager.set_active_item(internal_category, item_id)
			_update_all_item_cards_in_category(internal_category, item_id)
			print("ShopScreen.gd: –ü—Ä–µ–¥–º–µ—Ç –∞–∫—Ç–∏–≤–∏—Ä–æ–≤–∞–Ω: ", item_id)
		else:
			print("ShopScreen.gd: –ù–µ–∏–∑–≤–µ—Å—Ç–Ω–∞—è –∫–∞—Ç–µ–≥–æ—Ä–∏—è –¥–ª—è –ø—Ä–µ–¥–º–µ—Ç–∞: ", item_id)
	else:
		print("ShopScreen.gd: –ü—Ä–µ–¥–º–µ—Ç —Å ID ", item_id, " –Ω–µ –Ω–∞–π–¥–µ–Ω –≤ –¥–∞–Ω–Ω—ã—Ö –º–∞–≥–∞–∑–∏–Ω–∞.")
func _on_item_preview_pressed(item_id: String):
	print("ShopScreen.gd: –ó–∞–ø—Ä–æ—Å –Ω–∞ –ø—Ä–µ–¥–ø—Ä–æ—Å–º–æ—Ç—Ä –∞—É–¥–∏–æ –¥–ª—è –ø—Ä–µ–¥–º–µ—Ç–∞: ", item_id)
	var item_data = _find_item_by_id(item_id)
	if item_data:
		_preview_sound(item_data)
	else:
		print("ShopScreen.gd: –ü—Ä–µ–¥–º–µ—Ç —Å ID ", item_id, " –Ω–µ –Ω–∞–π–¥–µ–Ω –≤ –¥–∞–Ω–Ω—ã—Ö –º–∞–≥–∞–∑–∏–Ω–∞ –¥–ª—è –ø—Ä–µ–¥–ø—Ä–æ—Å–º–æ—Ç—Ä–∞.")
func _preview_sound(item: Dictionary):
	var audio_path = item.get("audio", "")
	if audio_path and music_manager:
		print("ShopScreen.gd: –ü—Ä–µ–¥–ø—Ä–æ—Å–º–æ—Ç—Ä: %s" % audio_path)
		if audio_path.begins_with("res://"):
			music_manager.play_custom_hit_sound(audio_path)
		else:
			music_manager.play_custom_hit_sound(audio_path)
		var path_for_manager = audio_path
		if audio_path.begins_with("res://assets/shop/sounds/"):
			path_for_manager = audio_path.replace("res://assets/shop/sounds/", "")
		if FileAccess.file_exists(audio_path):
			music_manager.play_custom_hit_sound(path_for_manager)
		else:
			print("ShopScreen.gd: –ó–≤—É–∫ –Ω–µ –Ω–∞–π–¥–µ–Ω –ø–æ –∞–±—Å–æ–ª—é—Ç–Ω–æ–º—É –ø—É—Ç–∏: %s, –∏—Å–ø–æ–ª—å–∑—É–µ–º —Å—Ç–∞–Ω–¥–∞—Ä—Ç–Ω—ã–π" % audio_path)
			music_manager.play_default_shop_sound()
	else:
		print("ShopScreen.gd: –ù–µ—Ç –∞—É–¥–∏–æ —É %s –∏–ª–∏ MusicManager –Ω–µ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω" % item.get("item_id", "–ë–µ–∑ ID"))
		if music_manager:
			music_manager.play_default_shop_sound()

func _on_cover_click_pressed(item_data: Dictionary):
	print("ShopScreen.gd: –ö–ª–∏–∫ –ø–æ –æ–±–ª–æ–∂–∫–µ: ", item_data.get("name", "–ë–µ–∑ –Ω–∞–∑–≤–∞–Ω–∏—è"))
	_open_cover_gallery(item_data)

func _open_cover_gallery(item_data: Dictionary):
	if current_cover_gallery:
		if is_instance_valid(current_cover_gallery):
			current_cover_gallery.queue_free()
		current_cover_item_data = {}

	current_cover_item_data = item_data

	var gallery_scene = preload("res://scenes/shop/cover_gallery.tscn")
	print("ShopScreen.gd: –ó–∞–≥—Ä—É–∂–µ–Ω–Ω–∞—è —Å—Ü–µ–Ω–∞: ", gallery_scene)
	current_cover_gallery = gallery_scene.instantiate()
	print("ShopScreen.gd: –°–æ–∑–¥–∞–Ω–Ω—ã–π —É–∑–µ–ª: ", current_cover_gallery)
	print("ShopScreen.gd: –ö–ª–∞—Å—Å —Å–æ–∑–¥–∞–Ω–Ω–æ–≥–æ —É–∑–ª–∞: ", current_cover_gallery.get_class())
	print("ShopScreen.gd: –°–∫—Ä–∏–ø—Ç —Å–æ–∑–¥–∞–Ω–Ω–æ–≥–æ —É–∑–ª–∞: ", current_cover_gallery.get_script())

	current_cover_gallery.images_folder = item_data.get("images_folder", "")
	current_cover_gallery.images_count = item_data.get("images_count", 0)

	current_cover_gallery.connect("gallery_closed", _on_gallery_closed, CONNECT_ONE_SHOT)
	current_cover_gallery.connect("cover_selected", _on_cover_selected_stub, CONNECT_ONE_SHOT)

	var self_is_valid = is_instance_valid(self)
	var self_queued_for_deletion = is_queued_for_deletion()
	var self_is_inside_tree = is_inside_tree()
	var gallery_is_valid = is_instance_valid(current_cover_gallery)

	print("ShopScreen.gd: –ü—Ä–æ–≤–µ—Ä–∫–∞ –ø–µ—Ä–µ–¥ –æ—Ç–ª–æ–∂–µ–Ω–Ω—ã–º add_child:")
	print(" - is_instance_valid(self): ", self_is_valid)
	print(" - is_queued_for_deletion(): ", self_queued_for_deletion)
	print(" - is_inside_tree(): ", self_is_inside_tree)
	print(" - is_instance_valid(current_cover_gallery): ", gallery_is_valid)

	if self_is_valid and not self_queued_for_deletion and self_is_inside_tree and gallery_is_valid:
		print("ShopScreen.gd: –ü–ª–∞–Ω–∏—Ä—É—é –æ—Ç–ª–æ–∂–µ–Ω–Ω–æ–µ –¥–æ–±–∞–≤–ª–µ–Ω–∏–µ –≥–∞–ª–µ—Ä–µ–∏ –∫–∞–∫ –¥–æ—á–µ—Ä–Ω–µ–≥–æ —É–∑–ª–∞.")
		call_deferred("_deferred_add_child", current_cover_gallery)
		print("ShopScreen.gd: –û—Ç–ª–æ–∂–µ–Ω–Ω–æ–µ –¥–æ–±–∞–≤–ª–µ–Ω–∏–µ –∑–∞–ø–ª–∞–Ω–∏—Ä–æ–≤–∞–Ω–æ.")
	else:
		print("ShopScreen.gd: ShopScreen –∏–ª–∏ –≥–∞–ª–µ—Ä–µ—è –Ω–µ–¥–µ–π—Å—Ç–≤–∏—Ç–µ–ª—å–Ω—ã, –≥–∞–ª–µ—Ä–µ—è –Ω–µ –±—É–¥–µ—Ç –¥–æ–±–∞–≤–ª–µ–Ω–∞.")
		if is_instance_valid(current_cover_gallery):
			current_cover_gallery.queue_free()
		current_cover_item_data = {}

func _deferred_add_child(gallery_node: Node):
	if is_instance_valid(self) and not is_queued_for_deletion() and is_inside_tree() and is_instance_valid(gallery_node):
		print("ShopScreen.gd: (DEFERRED) –î–æ–±–∞–≤–ª—è—é –≥–∞–ª–µ—Ä–µ—é –∫–∞–∫ –¥–æ—á–µ—Ä–Ω–∏–π —É–∑–µ–ª.")
		add_child(gallery_node)
		gallery_node.grab_focus()
		print("ShopScreen.gd: (DEFERRED) –ì–∞–ª–µ—Ä–µ—è –¥–æ–±–∞–≤–ª–µ–Ω–∞ –∏ —Ñ–æ–∫—É—Å —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω.")
	else:
		print("ShopScreen.gd: (DEFERRED) ShopScreen –∏–ª–∏ –≥–∞–ª–µ—Ä–µ—è –Ω–µ–¥–µ–π—Å—Ç–≤–∏—Ç–µ–ª—å–Ω—ã –ø—Ä–∏ –æ—Ç–ª–æ–∂–µ–Ω–Ω–æ–º –¥–æ–±–∞–≤–ª–µ–Ω–∏–∏.")
		if is_instance_valid(gallery_node):
			gallery_node.queue_free()
		if current_cover_gallery == gallery_node:
			current_cover_gallery = null
		current_cover_item_data = {}


func _on_cover_selected_stub(index: int):
	pass

func _on_gallery_closed():
	print("ShopScreen.gd: –ì–∞–ª–µ—Ä–µ—è –æ–±–ª–æ–∂–µ–∫ –∑–∞–∫—Ä—ã—Ç–∞.")
	if is_instance_valid(current_cover_gallery):
		if current_cover_gallery.is_connected("gallery_closed", _on_gallery_closed):
			current_cover_gallery.disconnect("gallery_closed", _on_gallery_closed)
		if current_cover_gallery.is_connected("cover_selected", _on_cover_selected_stub):
			current_cover_gallery.disconnect("cover_selected", _on_cover_selected_stub)
		current_cover_gallery = null
	current_cover_item_data = {}

func _on_cover_selected(index: int):
	print("ShopScreen.gd: –í—ã–±—Ä–∞–Ω–∞ –æ–±–ª–æ–∂–∫–∞ %d –∏–∑ –ø–∞–∫–∞ '%s'." % [index, current_cover_item_data.get("name", "–ë–µ–∑ –Ω–∞–∑–≤–∞–Ω–∏—è")])

func _exit_tree():
	print("ShopScreen.gd: _exit_tree –≤—ã–∑–≤–∞–Ω. –≠–∫—Ä–∞–Ω —É–¥–∞–ª—è–µ—Ç—Å—è –∏–∑ –¥–µ—Ä–µ–≤–∞ —Å—Ü–µ–Ω.")
	cleanup_gallery()

func cleanup_gallery():
	if current_cover_gallery:
		if is_instance_valid(current_cover_gallery):
			if current_cover_gallery.is_connected("gallery_closed", _on_gallery_closed):
				current_cover_gallery.disconnect("gallery_closed", _on_gallery_closed)
			if current_cover_gallery.is_connected("cover_selected", _on_cover_selected_stub):
				current_cover_gallery.disconnect("cover_selected", _on_cover_selected_stub)
		if is_instance_valid(current_cover_gallery):
			current_cover_gallery.queue_free()
		current_cover_gallery = null
		current_cover_item_data = {}
		print("ShopScreen.gd: –ì–∞–ª–µ—Ä–µ—è –æ—á–∏—â–µ–Ω–∞ –≤ _exit_tree –∏–ª–∏ cleanup_gallery.")


func _find_item_by_id(item_id: String) -> Dictionary:
	for item in shop_data.get("items", []):
		if item.get("item_id", "") == item_id:
			return item
	return {}

func _update_item_card_state(item_id: String, purchased: bool, active: bool):
	for card in item_cards:
		if card.item_data.get("item_id", "") == item_id:
			card.update_state(purchased, active)
			break

func _update_all_item_cards_in_category(category: String, active_item_id: String):
	for card in item_cards:
		var category_map = _get_category_map()
		var internal_category = category_map.get(card.item_data.category, "")
		if internal_category == category:
			var is_purchased = player_data_manager.is_item_unlocked(card.item_data.item_id)
			var is_active = (card.item_data.item_id == active_item_id)
			card.update_state(is_purchased, is_active)
func _on_back_pressed():
	print("ShopScreen.gd: –ù–∞–∂–∞—Ç–∞ –∫–Ω–æ–ø–∫–∞ –ù–∞–∑–∞–¥ –∏–ª–∏ Escape.")
	var game_engine = get_parent()
	if game_engine and game_engine.has_method("prepare_screen_exit"):
		if game_engine.prepare_screen_exit(self):
			print("ShopScreen.gd: –≠–∫—Ä–∞–Ω –ø–æ–¥–≥–æ—Ç–æ–≤–ª–µ–Ω –∫ –≤—ã—Ö–æ–¥—É —á–µ—Ä–µ–∑ GameEngine.")
		else:
			print("ShopScreen.gd: –û–®–ò–ë–ö–ê –ø–æ–¥–≥–æ—Ç–æ–≤–∫–∏ —ç–∫—Ä–∞–Ω–∞ –∫ –≤—ã—Ö–æ–¥—É —á–µ—Ä–µ–∑ GameEngine.")
	else:
		printerr("ShopScreen.gd: –ù–µ —É–¥–∞–ª–æ—Å—å –ø–æ–ª—É—á–∏—Ç—å GameEngine –∏–ª–∏ –º–µ—Ç–æ–¥ prepare_screen_exit!")
	if music_manager:
		music_manager.play_cancel_sound()
		print("ShopScreen.gd: play_cancel_sound –≤—ã–∑–≤–∞–Ω.")
	else:
		printerr("ShopScreen.gd: music_manager –Ω–µ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω!")
	if player_data_manager:
		print("ShopScreen.gd: –î–∞–Ω–Ω—ã–µ –∏–≥—Ä–æ–∫–∞ (–ª–æ–∫–∞–ª—å–Ω–æ) —Å–æ—Ö—Ä–∞–Ω–µ–Ω—ã –±—ã (–µ—Å–ª–∏ —Ä–µ–∞–ª–∏–∑–æ–≤–∞–Ω –º–µ—Ç–æ–¥ save_player_data –≤ PlayerDataManager).")
	else:
		printerr("ShopScreen.gd: player_data_manager –Ω–µ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω!")
	if transitions:
		transitions.close_shop()
		print("ShopScreen.gd: –ó–∞–∫—Ä—ã–≤–∞—é –º–∞–≥–∞–∑–∏–Ω —á–µ—Ä–µ–∑ Transitions.")
	else:
		printerr("ShopScreen.gd: transitions –Ω–µ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω, –Ω–µ–≤–æ–∑–º–æ–∂–Ω–æ –∑–∞–∫—Ä—ã—Ç—å –º–∞–≥–∞–∑–∏–Ω —á–µ—Ä–µ–∑ Transitions.")
func _unhandled_input(event):
	if event is InputEventKey and event.keycode == KEY_ESCAPE and event.pressed:
		print("ShopScreen.gd: –û–±–Ω–∞—Ä—É–∂–µ–Ω–æ –Ω–∞–∂–∞—Ç–∏–µ Escape, –≤—ã–∑—ã–≤–∞—é _on_back_pressed.")
		accept_event()
		_on_back_pressed()
func cleanup_before_exit():
	print("ShopScreen.gd: cleanup_before_exit –≤—ã–∑–≤–∞–Ω. –û—á–∏—â–∞–µ–º —Ä–µ—Å—É—Ä—Å—ã.")
	if current_cover_gallery:
		if is_instance_valid(current_cover_gallery):
			current_cover_gallery.queue_free()
		current_cover_gallery = null
		current_cover_item_data = {}
		print("ShopScreen.gd: –ì–∞–ª–µ—Ä–µ—è –æ–±–ª–æ–∂–µ–∫ –æ—á–∏—â–µ–Ω–∞ –≤ cleanup_before_exit.")
